k8s/media-stack/base/apps/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sabnzbd
          image: ghcr.io/hotio/sabnzbd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: media-root
              mountPath: /config
              subPath: appdata/sabnzbd
            - name: media-root
              mountPath: /export
      volumes:
        - name: media-root
          persistentVolumeClaim:
            claimName: nfs-export-root
